tests/NormalTests/paczka2/big_fuzzy/48746444.err
Error in line 1: xonPeuv S918 4,5
Error in line 7: xonPeuv A701 7,7
Error in line 13: mvx5XV A701 30,9
Error in line 25: xonPeuv A701 79,5
Error in line 42: vJH5A A701 8,0
Error in line 39: nuGVnN1 S918 17,0
Error in line 47: vJH5A S918 37,1
Error in line 56: oqxiVE9MG S784 42,6
Error in line 61: oqxiVE9MG S918 47,6
Error in line 71: oqxiVE9MG S784 25,7
Error in line 77: vJH5A S784 5,8
Error in line 84: mvx5XV A170 23,2
Error in line 88: A701 A170 37,21
Error in line 85: nuGVnN1 S918 57,9
Error in line 82: A701 A170 19,1
Error in line 87: mvx5XV S918 83,8
Error in line 98: A701 S784 74,0
Error in line 96: vJH5A S918 58,0
Error in line 102: xonPeuv S918 204,3
Error in line 119: mvx5XV A170 26,3
Error in line 127: mvx5XV S918 49,2
Error in line 136: qy0 S784 34,7
Error in line 149: nuGVnN1 S784 46,8
Error in line 152: nuGVnN1 A170 39,8
Error in line 170: vJH5A S#18 88,3
Error in line 172: nuGVnN1 A701 133,6
Error in line 176: qy0 A701 52,5
Error in line 181: A701 S784 201,3
Error in line 186: A701 A701 68,0
Error in line 188: A701 S918 1,0
Error in line 212: A701 A701 25,5
Error in line 220: A701 S918 79,1
Error in line 217: vJH5A S918 188,8
Error in line 231: vJH5A S918 69,0
Error in line 235: xonPeuv S918 38,9
Error in line 230: oqxiVE9MG S784 45,0
Error in line 239: vJH5A S784 232,7
Error in line 243: A701 A170 70,7
